--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,11 +6,35 @@
     android:layout_height="match_parent"
     tools:context="com.a7psychopaths.skaitliukoskeneris.Main2Activity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="You you"
-        tools:layout_editor_absoluteX="163dp"
-        tools:layout_editor_absoluteY="170dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="509dp"
+        android:layout_gravity="center"
+        android:layout_weight="0.7"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="30dp">
+
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="258dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Dujos" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="258dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Elektra" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="257dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Vanduo" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
