--- a/app/src/main/res/layout/activity_main7.xml
+++ b/app/src/main/res/layout/activity_main7.xml
@@ -12,4 +12,17 @@
         android:id="@+id/java_camera_view"
         />
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="201dp"
+        android:layout_height="34dp"
+        android:layout_marginBottom="56dp"
+        android:layout_marginStart="128dp"
+        android:text="TextView"
+        android:textSize="32dp"
+        android:textColor="#F00"
+        app:layout_constraintBottom_toBottomOf="@+id/java_camera_view"
+        app:layout_constraintStart_toStartOf="@+id/java_camera_view" />
+
+
 </android.support.constraint.ConstraintLayout>
