--- a/app/src/main/res/layout/activity_main7.xml
+++ b/app/src/main/res/layout/activity_main7.xml
@@ -16,11 +16,31 @@
         android:id="@+id/textView5"
         android:layout_width="201dp"
         android:layout_height="34dp"
-        android:layout_marginBottom="56dp"
-        android:layout_marginStart="128dp"
-        android:text="TextView"
-        android:textSize="32dp"
+        android:layout_marginBottom="100dp"
+        android:layout_marginStart="196dp"
+        android:text="0"
         android:textColor="#F00"
+        android:textSize="32dp"
+        app:layout_constraintBottom_toBottomOf="@+id/java_camera_view"
+        app:layout_constraintStart_toStartOf="@+id/java_camera_view" />
+
+    <Button
+        android:id="@+id/button10"
+        android:layout_width="104dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="320dp"
+        android:text="Save"
+        app:layout_constraintBottom_toBottomOf="@+id/java_camera_view"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button11"
+        android:layout_width="126dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="436dp"
+        android:text="Exit to Menu"
         app:layout_constraintBottom_toBottomOf="@+id/java_camera_view"
         app:layout_constraintStart_toStartOf="@+id/java_camera_view" />
 
