--- a/app/src/main/res/layout/choose_meter_window.xml
+++ b/app/src/main/res/layout/choose_meter_window.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.a7psychopaths.skaitliukoskeneris.Main2Activity">
+    tools:context="com.a7psychopaths.skaitliukoskeneris.ChooseMeterWindow">
 
     <LinearLayout
         android:layout_width="match_parent"
