--- a/app/src/main/res/layout/main_window.xml
+++ b/app/src/main/res/layout/main_window.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.a7psychopaths.skaitliukoskeneris.MainActivity">
+    tools:context="com.a7psychopaths.skaitliukoskeneris.MainWindow">
 
     <TextView
         android:padding="5dp"
